[gd_scene load_steps=6 format=3 uid="uid://dl6v631imyrf3"]

[ext_resource type="Script" uid="uid://b1jjmgfswkkjp" path="res://editor/subtitle_bind_editor.gd" id="1_bjtsp"]
[ext_resource type="Theme" uid="uid://1adxjbws8hdd" path="res://editor/editor_theme.tres" id="1_uji6j"]
[ext_resource type="PackedScene" uid="uid://bqr47tcimigpn" path="res://editor/base/subtitle/path_bind_form.tscn" id="2_bjtsp"]
[ext_resource type="PackedScene" uid="uid://lo4by6vi70kl" path="res://editor/base/sound_bar.tscn" id="2_uvkbo"]
[ext_resource type="PackedScene" uid="uid://dlk7krendsprp" path="res://editor/base/subtitle/subtitle_multi_viewer.tscn" id="3_uji6j"]

[node name="SubtitleBindEditor" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bjtsp")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
split_offset = 700

[node name="PathBindForm" parent="HSplitContainer" instance=ExtResource("2_bjtsp")]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel3" type="Panel" parent="HSplitContainer/VBoxContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
size_flags_horizontal = 3

[node name="sound_path" type="Label" parent="HSplitContainer/VBoxContainer/HBoxContainer/Panel3"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "no audio selected yet"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_uji6j")

[node name="SoundBar" parent="HSplitContainer/VBoxContainer/PanelContainer" instance=ExtResource("2_uvkbo")]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_uji6j")

[node name="SubtitleMultiViewer" parent="HSplitContainer/VBoxContainer/PanelContainer2" instance=ExtResource("3_uji6j")]
unique_name_in_owner = true
layout_mode = 2
